Add role hierarchy admin and artist, add artist entity, artist constroller, artist repository

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,6 +30,8 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
     role_hierarchy:
         ROLE_USER: ROLE_USER
+        ROLE_ARTIST: ROLE_ARTIST
+        ROLE_ADMIN: [ ROLE_USER, ROLE_ARTIST ]
 
 when@test:
     security:
