add img uploader

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    artPicture_folder: '%kernel.project_dir%/public/uploads/artPicture'
 
 services:
     # default configuration for services in *this* file
@@ -19,6 +20,10 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    App\Service\ArtPictureUploader:
+        arguments:
+            $targetDirectory: '%artPicture_folder%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
