--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+ARTPICTURE_FOLDER=/uploads/ArtPicture/
