add map, rework css art

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.3"
     }
 }
