add right path in artist for picture and add function for load api only if route is call on header

--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###< symfony/mailer ###
 
 ARTPICTURE_FOLDER=uploads/pictureArt/
+PICTURE_USER_FOLDER=uploads/pictureUser/
